--- a/trafegoespacial/src/main/webapp/WEB-INF/templates/Menu.xhtml
+++ b/trafegoespacial/src/main/webapp/WEB-INF/templates/Menu.xhtml
@@ -8,7 +8,10 @@
 				<h:link><i class="fa  fa-fw  fa-home"></i>Cadastro</h:link>
 			</li>
 			<li class="is-selected">
-				<h:link><i class="fa  fa-fw  fa-user"></i>Controle de Voo</h:link>
+			<h:form>
+				<h:commandLink action="manterPlanoVoo" ><i class="fa  fa-fw  fa-user"></i>Controle de Voo</h:commandLink>
+			</h:form>
+				
 			</li>
 			
 		</ul>
