--- a/trafegoespacial/src/main/webapp/WEB-INF/templates/Layout.xhtml
+++ b/trafegoespacial/src/main/webapp/WEB-INF/templates/Layout.xhtml
@@ -10,7 +10,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 	</f:facet>
 
-	<title>AlgaWorks</title>
+	<title>Império Galático</title>
 
 	<h:outputStylesheet library="algaworks" name="styles/custom.css" />
 	<h:outputStylesheet library="algaworks" name="styles/layout.css" />
@@ -23,7 +23,6 @@
 <h:body>
 
 	<header class="aw-topbar">
-		<h:graphicImage library="algaworks" name="images/logo.png" />
 		
 		<a href="#" class="aw-toggle  js-toggle"><i class="fa  fa-bars"></i></a>
 	</header>
